Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -14,6 +14,6 @@ steps:
 - task: CmdLine@2
   inputs:
     script: |
-      javac AddTwoNumber.java
+      javac AddTwoNumbers.java
       
-      java AddTwoNumber
+      java AddTwoNumbers
